--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "example_joystick_usage.c"
+idf_component_register(SRCS "example_usage.c" "fs_usb_handler.c"
                     INCLUDE_DIRS ".")
